# ManiSkill

./: pyproject.toml  table_config.json
examples/baselines/ppo/: custom_tasks.py  env_rgb_rendering_benchmark.py
mani_skill/utils/scene_builder/: scene_builder.py
mani_skill/utils/scene_builder/table/: table_scene_builder.py
scripts/: skrl_policies.py
