[tool.poetry]
name = "maniskill"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = ">=1.22"
scipy = "^1.13.1"
dacite = "^1.8.1"
gymnasium = "0.29.1"
sapien = "3.0.0.b0"
h5py = "^3.11.0"
pyyaml = "^6.0.1"
tqdm = "^4.66.4"
gitpython = "^3.1.43"
tabulate = "^0.9.0"
transforms3d = "^0.4.1"
trimesh = "^4.4.1"
rtree = "^1.2.0"
opencv-python = "^4.10.0.82"
imageio = {extras = ["ffmpeg"], version = "^2.34.1"}
mplib = ">=0.1.1"
fast-kinematics = "0.2.2"
ipython = "^8.25.0"
huggingface-hub = "^0.23.3"
torch = "^2.3.1"
tyro = "^0.8.4"
wandb = "^0.17.1"
pygltflib = "^1.16.2"

[build-system]
requires = ["setuptools>=62.3.0"]
build-backend  = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
    "gpu_sim: marks tests as using the GPU simulation (deselect with '-m \"not gpu_sim\"')",
    "serial",
]
